<resources>
    <string name="app_name">Phone Dealer</string>
    <string name="delete">X</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="cardinal">#</string>
    <string name="add">+</string>
    <string name="call">Calling to...</string>
    <string name="enterName">Enter Name</string>
    <string name="enterNumber">Enter Number</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="empty">-</string>
</resources>