<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="245sp"
            android:layout_height="match_parent"
            android:layout_marginEnd="12sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textSize="34sp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#009AFF"
            android:onClick="delete"
            app:srcCompat="@android:drawable/ic_input_delete"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/buttonCall1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:maxWidth="100dp"
            android:onClick="call1"
            android:text="@string/empty"
            android:textSize="12sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonCall2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="41sp"
            android:layout_marginEnd="41sp"
            android:backgroundTint="#C1C1C1"
            android:maxWidth="100dp"
            android:onClick="call2"
            android:text="@string/empty"
            android:textSize="12sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonCall3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:maxWidth="100dp"
            android:onClick="call3"
            android:text="@string/empty"
            android:textSize="12sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="one"
            android:text="@string/one"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="41sp"
            android:layout_marginEnd="41sp"
            android:backgroundTint="#C1C1C1"
            android:onClick="two"
            android:text="@string/two"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="three"
            android:text="@string/three"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="four"
            android:text="@string/four"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="41sp"
            android:layout_marginEnd="41sp"
            android:backgroundTint="#C1C1C1"
            android:onClick="five"
            android:text="@string/five"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="six"
            android:text="@string/six"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="seven"
            android:text="@string/seven"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="41sp"
            android:layout_marginEnd="41sp"
            android:backgroundTint="#C1C1C1"
            android:onClick="eight"
            android:text="@string/eight"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="nine"
            android:text="@string/nine"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="64sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/buttonMais"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="add"
            android:text="@string/add"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="41sp"
            android:layout_marginEnd="41sp"
            android:backgroundTint="#C1C1C1"
            android:onClick="zero"
            android:text="@string/zero"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonCardinal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#C1C1C1"
            android:onClick="cardinal"
            android:text="@string/cardinal"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonCall"
        android:layout_width="251dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#079A56"
        android:onClick="call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:srcCompat="@android:drawable/stat_sys_phone_call"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>